gccida/g3/expand_expr
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6494:41: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_expr( tree exp, rtx target, machine_mode tmode, expand_modifier modifier) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6494:61: error: must use 'enum' tag to refer to type 'expand_modifier'
rtx  expand_expr( tree exp, rtx target, machine_mode tmode, expand_modifier modifier) 
                                                            ^
                                                            enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6496:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6511:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6532:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6536:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6537:1: error: must use 'enum' tag to refer to type 'expand_modifier'
expand_modifier v46; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6548:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v57; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6554:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6567:4: error: expected ';' after expression
rtx v76; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6567:5: error: use of undeclared identifier 'v76'
rtx v76; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6569:4: error: expected ';' after expression
rtx v78; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6569:5: error: use of undeclared identifier 'v78'
rtx v78; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6570:4: error: expected ';' after expression
rtx v79; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6570:5: error: use of undeclared identifier 'v79'
rtx v79; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/expr.c:6572:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_expr/src/obj/expr.o] Error 1
